# document-template-designer

./: .gitignore  PDFhandler.py  PDFhandler.spec  README.md  docx2pdf.py  image.xml  pyproject.toml  replacements.xml  replacements_image1.xml
document_template_designer.egg-info/: PKG-INFO
src/: handler.py  main.py  reader_str.py  reader_xml.py
src/entity/: usestring.py
src/helpers/: docxtopdf.py  errormes.py  fileos.py
src/parsers/: reader_str.py  reader_xml.py
